fix overflow issues

--- a/sphereCollector/stylesheet.css
+++ b/sphereCollector/stylesheet.css
@@ -6,6 +6,7 @@
 		margin: 0px;
 		padding: 0px;
 		border: 0px;
+		overflow: hidden;
 	}
 
 /* pen */
@@ -15,6 +16,7 @@
 		box-shadow: 0px -3px 30px 1px black inset;
 		cursor: pointer;
 		cursor: crosshair;
+		overflow: hidden;
 	}
 
 /* spheres */
